[package]
name = "elizadb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
byteorder = "1.5.0"
rmp-serde = "1.1.2"
serde = {version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
thiserror = "1.0.56"
tokio = {version = "1.35.1", features = ["full"] }
